# dials-modwrap

./: prepare.py
cmake/cmakelists/annlib/: CMakeLists.txt
cmake/cmakelists/annlib_adaptbx/: CMakeLists.txt
cmake/cmakelists/annlib_adaptbx/ann/boost_python/: CMakeLists.txt
cmake/cmakelists/cctbx_project/: CMakeLists.txt
cmake/cmakelists/cctbx_project/boost_adaptbx/: CMakeLists.txt
cmake/cmakelists/cctbx_project/boost_adaptbx/graph/: CMakeLists.txt
cmake/cmakelists/cctbx_project/boost_adaptbx/tests/: CMakeLists.txt
cmake/cmakelists/cctbx_project/cbflib_adaptbx/: CMakeLists.txt
cmake/cmakelists/cctbx_project/cbflib_adaptbx/detectors/: CMakeLists.txt
cmake/cmakelists/cctbx_project/cctbx/: CMakeLists.txt
cmake/cmakelists/cctbx_project/cctbx/adp_restraints/: CMakeLists.txt
cmake/cmakelists/cctbx_project/cctbx/boost_python/: CMakeLists.txt
cmake/cmakelists/cctbx_project/cctbx/crystal/: CMakeLists.txt
cmake/cmakelists/cctbx_project/cctbx/examples/: CMakeLists.txt
cmake/cmakelists/cctbx_project/cctbx/geometry_restraints/: CMakeLists.txt
cmake/cmakelists/cctbx_project/cctbx/maptbx/: CMakeLists.txt
cmake/cmakelists/cctbx_project/cctbx/math/: CMakeLists.txt
cmake/cmakelists/cctbx_project/cctbx/merging/: CMakeLists.txt
cmake/cmakelists/cctbx_project/cctbx/multipolar/: CMakeLists.txt
cmake/cmakelists/cctbx_project/cctbx/sgtbx/: CMakeLists.txt
cmake/cmakelists/cctbx_project/cctbx/uctbx/: CMakeLists.txt
cmake/cmakelists/cctbx_project/cctbx/xray/: CMakeLists.txt
cmake/cmakelists/cctbx_project/chiltbx/: CMakeLists.txt
cmake/cmakelists/cctbx_project/cma_es/: CMakeLists.txt
cmake/cmakelists/cctbx_project/dxtbx/: CMakeLists.txt
cmake/cmakelists/cctbx_project/dxtbx/boost_python/: CMakeLists.txt
cmake/cmakelists/cctbx_project/fable/: CMakeLists.txt
cmake/cmakelists/cctbx_project/gltbx/: CMakeLists.txt
cmake/cmakelists/cctbx_project/iotbx/: CMakeLists.txt
cmake/cmakelists/cctbx_project/iotbx/ccp4_map/: CMakeLists.txt
cmake/cmakelists/cctbx_project/iotbx/detectors/: CMakeLists.txt
cmake/cmakelists/cctbx_project/iotbx/dsn6/: CMakeLists.txt
cmake/cmakelists/cctbx_project/iotbx/mtz/: CMakeLists.txt
cmake/cmakelists/cctbx_project/iotbx/pdb/: CMakeLists.txt
cmake/cmakelists/cctbx_project/iotbx/shelx/: CMakeLists.txt
cmake/cmakelists/cctbx_project/iotbx/xplor/: CMakeLists.txt
cmake/cmakelists/cctbx_project/mmtbx/: CMakeLists.txt
cmake/cmakelists/cctbx_project/mmtbx/building/: CMakeLists.txt
cmake/cmakelists/cctbx_project/mmtbx/bulk_solvent/: CMakeLists.txt
cmake/cmakelists/cctbx_project/mmtbx/dynamics/: CMakeLists.txt
cmake/cmakelists/cctbx_project/mmtbx/f_model/: CMakeLists.txt
cmake/cmakelists/cctbx_project/mmtbx/hydrogens/: CMakeLists.txt
cmake/cmakelists/cctbx_project/mmtbx/masks/: CMakeLists.txt
cmake/cmakelists/cctbx_project/mmtbx/max_lik/: CMakeLists.txt
cmake/cmakelists/cctbx_project/mmtbx/ncs/: CMakeLists.txt
cmake/cmakelists/cctbx_project/mmtbx/rotamer/: CMakeLists.txt
cmake/cmakelists/cctbx_project/mmtbx/rsr/: CMakeLists.txt
cmake/cmakelists/cctbx_project/mmtbx/scaling/: CMakeLists.txt
cmake/cmakelists/cctbx_project/mmtbx/secondary_structure/: CMakeLists.txt
cmake/cmakelists/cctbx_project/mmtbx/tls/: CMakeLists.txt
cmake/cmakelists/cctbx_project/mmtbx/utils/: CMakeLists.txt
cmake/cmakelists/cctbx_project/mmtbx/validation/: CMakeLists.txt
cmake/cmakelists/cctbx_project/omptbx/: CMakeLists.txt
cmake/cmakelists/cctbx_project/prime/: CMakeLists.txt
cmake/cmakelists/cctbx_project/prime/index_ambiguity/: CMakeLists.txt
cmake/cmakelists/cctbx_project/rstbx/: CMakeLists.txt
cmake/cmakelists/cctbx_project/rstbx/apps/: CMakeLists.txt
cmake/cmakelists/cctbx_project/rstbx/array_family/: CMakeLists.txt
cmake/cmakelists/cctbx_project/rstbx/bandpass/: CMakeLists.txt
cmake/cmakelists/cctbx_project/rstbx/bpcx/: CMakeLists.txt
cmake/cmakelists/cctbx_project/rstbx/diffraction/: CMakeLists.txt
cmake/cmakelists/cctbx_project/rstbx/indexing_api/: CMakeLists.txt
cmake/cmakelists/cctbx_project/rstbx/simage/: CMakeLists.txt
cmake/cmakelists/cctbx_project/rstbx/simulation/: CMakeLists.txt
cmake/cmakelists/cctbx_project/rstbx/symmetry/: CMakeLists.txt
cmake/cmakelists/cctbx_project/scitbx/: CMakeLists.txt
cmake/cmakelists/cctbx_project/scitbx/array_family/: CMakeLists.txt
cmake/cmakelists/cctbx_project/scitbx/error/: CMakeLists.txt
cmake/cmakelists/cctbx_project/scitbx/examples/: CMakeLists.txt
cmake/cmakelists/cctbx_project/scitbx/fftpack/: CMakeLists.txt
cmake/cmakelists/cctbx_project/scitbx/graphics_utils/: CMakeLists.txt
cmake/cmakelists/cctbx_project/scitbx/iso_surface/: CMakeLists.txt
cmake/cmakelists/cctbx_project/scitbx/lbfgs/: CMakeLists.txt
cmake/cmakelists/cctbx_project/scitbx/lbfgsb/: CMakeLists.txt
cmake/cmakelists/cctbx_project/scitbx/minpack/: CMakeLists.txt
cmake/cmakelists/cctbx_project/scitbx/rigid_body/: CMakeLists.txt
cmake/cmakelists/cctbx_project/scitbx/serialization/: CMakeLists.txt
cmake/cmakelists/cctbx_project/scitbx/slatec/: CMakeLists.txt
cmake/cmakelists/cctbx_project/scitbx/sparse/: CMakeLists.txt
cmake/cmakelists/cctbx_project/scitbx/stl/: CMakeLists.txt
cmake/cmakelists/cctbx_project/scitbx/wigner/: CMakeLists.txt
cmake/cmakelists/cctbx_project/simtbx/: CMakeLists.txt
cmake/cmakelists/cctbx_project/simtbx/nanoBragg/: CMakeLists.txt
cmake/cmakelists/cctbx_project/smtbx/: CMakeLists.txt
cmake/cmakelists/cctbx_project/smtbx/ab_initio/: CMakeLists.txt
cmake/cmakelists/cctbx_project/smtbx/array_family/: CMakeLists.txt
cmake/cmakelists/cctbx_project/smtbx/refinement/: CMakeLists.txt
cmake/cmakelists/cctbx_project/smtbx/stl/: CMakeLists.txt
cmake/cmakelists/cctbx_project/spotfinder/: CMakeLists.txt
cmake/cmakelists/cctbx_project/spotfinder/array_family/: CMakeLists.txt
cmake/cmakelists/cctbx_project/spotfinder/dxtbx_toolbox/: CMakeLists.txt
cmake/cmakelists/cctbx_project/xfel/: CMakeLists.txt
cmake/cmakelists/cctbx_project/xfel/metrology/: CMakeLists.txt
cmake/cmakelists/cctbx_project/xfel/mono_simulation/: CMakeLists.txt
(+115 files in other folders)
